--- a/.htaccess
+++ b/.htaccess
@@ -9,6 +9,7 @@
   RewriteBase /deposito/
   RewriteCond %{REQUEST_FILENAME} !-f
   RewriteCond %{REQUEST_FILENAME} !-d
+  RewriteCond $1 !^^(index\.php|images|robots\.txt|assets|js|uploads)
   RewriteRule ^(.*)$ index.php?/$1 [L]
 </IfModule>
 
